# pyquant

./: .gitignore  README.txt  pyproject.toml
src/pyquant/: __init__.py  core.py
